# lh_library

./: CMakeLists.txt  MakefileIpopt  README.md  TheTest.ods  ctr01_main.cpp  ident05_gakm.hpp  ident05_test.cpp  lh_interfaces.hpp  lh_postgresql_Ipopt.c  lh_postgresql_Ipopt.c~  lh_solver_postgresql.h  lh_solver_postgresql.hpp  nlp_ctr01.cpp  nlp_ctr01.hpp
MathFunctions/: Makefile  MakefileCpp  Makefile~  MathFunctions.h  MathFunctions.hpp  math_example.c  math_example.cpp  myComputeScalarProduct.cpp.cxx  mySolveLinearLapack.c  mysqrt.cxx
collocation/: Makefile  TheCode  TheCode - Copie  TheFile  TheFileExample1  TheFileExample2  TheTest  ThisFileInp.in  deadcode.cpp  demo_mexfun.cpp  demo_mexfun.hpp  gnuplot_cmd.txt  ident05_accur.hpp  ident05_coll.cpp  ident05_coll.cpp~  ident05_coll.hpp  ident05_coll.hpp~  main_example.cpp  test_basic_istream.cpp
collocation_cinter/: basic_function_helper.py  callC_from_python.py  cpp_ctypes.hpp
first_tests/: Makefile  cvRoberts_dns_res.ods  cvRoberts_dns_res.txt  ident05_test.cpp
galerkin/: ident05_gakm.cpp  ident05_gakm.hpp
include/: ident05_coll.hpp  ident05_fftdata.hpp  lhTypes.hpp
main_cpp/: hs071_nlp.cpp  ident05_mex.cpp  ident05_wrap.cpp
main_mex/: demo_mexfunc.cpp  ident05_wrap.cpp  ident05_wrap.cpp~  ident05_wrap.h  ident05_wrap.h~
matlabcol2/: colnew.f  validvanderpol.f
misc/: input.txt  kalman_mainpgm.adb
optim/: Makefile.in  TutorialConfig.h  ident05_gakm.cpp  ident05_gakm.cpp~  ident05_gakm.hpp  ident05_gakm.hpp~  ident05_nlp.cpp  ident05_nlp.hpp  ident05_nlp.hpp~
postgresql_inc/: lh_interfaces.hpp  (+3 more)
(+119 files in other folders)
